samples/_failures_safe/1761695634_6823fd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9ab23f11.c: In function ‘executeAlgorithm’:
./samples/SAFE/__tmp_9ab23f11.c:144:13: error: expected declaration or statement at end of input
  144 |             dijkstra(graph, start);
      |             ^~~~~~~~
./samples/SAFE/__tmp_9ab23f11.c:144:13: error: expected declaration or statement at end of input
